adjusted rate limiter settings

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/cli-progress": "^3.11.6",
     "@types/lodash": "^4.17.14",
     "@types/pg": "^8.11.10",
     "type-fest": "^4.32.0"
