--- a/.github/workflows/fetch-futures-daily.yaml
+++ b/.github/workflows/fetch-futures-daily.yaml
@@ -2,7 +2,7 @@ name: Fetch Futures Daily
 
 on:
   schedule:
-    - cron: "30 7 * * *" # UTC 时间 15:30，即 UTC+8 的凌晨 15:30
+    - cron: "0 8 * * *" # 收盘后16: 00运行，即UTC 时间 08:00
   workflow_dispatch: # 允许手动触发
 
 jobs:
