--- a/.github/workflows/fetch-futures-daily.yaml
+++ b/.github/workflows/fetch-futures-daily.yaml
@@ -25,4 +25,4 @@ jobs:
         run: pip install -r ./requirements.txt
 
       - name: Run script
-        run: python daily.py
+        run: python -m jqdata_fetcher.tasks.daily
